docs: update README and design doc for v0.2 completion